--- a/Liveability/Info.plist
+++ b/Liveability/Info.plist
@@ -53,5 +53,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>So we can see where we are</string>
 </dict>
 </plist>
